# mpc

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.rst  autogen.sh  configure.ac  configure.in  meson.build  meson_options.txt  test.sh
.github/workflows/: build.yml
contrib/: mpc-completion.bash
debian/: Makefile.am  changelog  control  copyright
doc/: Makefile.am  conf.py  index.rst  m3u-handler.sh  meson.build  mpc-bashrc  mpc-completion.bash  mpc.1  mpd-m3u-handler.sh  mpd-pls-handler.sh  mppledit  pls-handler.sh
m4/: cflags.m4
src/: Compiler.h  Makefile.am  args.c  args.h  audio_format.c  audio_format.h  binary.c  binary.h  charConv.c  charConv.h  charset.c  charset.h  command.c  command.h  format.c  format.h  gcc.h  group.c  group.h  idle.c  idle.h  libmpdclient.c  libmpdclient.h  list.c  list.h  main.c  meson.build  meson_options.txt  message.c  message.h  mount.c  mount.h  mpc.h  mpc_compat.h  neighbors.c  neighbors.h  options.c  options.h  output.c  output.h  (+29 more)
src/.github/workflows/: build.yml
subprojects/: .gitignore  libmpdclient.wrap
test/: meson.build  test_format.c
