AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(mpc, 0.10.0)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

set -- $CFLAGS
CFLAGS="-Wall $CFLAGS"

AC_ARG_ENABLE(iconv,[  --disable-iconv     disable iconv support],,enable_iconv=yes)
AC_ARG_WITH(default-host,[  --with-default-host=HOST  Use as host when MPD_HOST environment variable is not set], DEFAULT_HOST="$withval",DEFAULT_HOST="localhost")
AC_ARG_WITH(default-port,[  --with-default-port=PORT  Use as port when MPD_PORT environment variable is not set], DEFAULT_PORT="$withval",DEFAULT_PORT="2100")

AC_CHECK_LIB(socket,socket,LIBS="$LIBS -lsocket",)
AC_CHECK_LIB(nsl,gethostbyname,LIBS="$LIBS -lnsl",)

if test x$enable_iconv = xyes; then
	AC_CHECK_HEADER(iconv.h,MPD_CFLAGS="$MPD_CFLAGS -DHAVE_ICONV",enable_iconv=no)
	if test x$enable_iconv = xyes; then
		AC_CHECK_LIB(iconv,iconv,MPD_LIBS="$MPD_LIBS -liconv",)
	fi
fi

AC_CHECK_HEADER(langinfo.h,CFLAGS="$CFLAGS -DHAVE_LANGINFO",)
AC_CHECK_HEADER(locale.h,CFLAGS="$CFLAGS -DHAVE_LOCALE",)

CFLAGS="$CFLAGS -DDEFAULT_HOST=\\\"$DEFAULT_HOST\\\""
CFLAGS="$CFLAGS -DDEFAULT_PORT=\\\"$DEFAULT_PORT\\\""

AC_OUTPUT(debian/Makefile doc/Makefile src/Makefile Makefile)
