option('iconv', type: 'combo',
  choices: ['true', 'false', 'auto'],
  value: 'auto',
  description: 'Enable iconv() support')

option('test', type: 'boolean',
  value: false,
  description: 'Enable unit tests')

option('docs', type: 'combo',
  choices: ['true', 'false', 'auto'], value: 'auto',
  description: 'Build documentation and manpage with Sphinx')
