bin_PROGRAMS = mpc
# lots of += lines makes diffs easier to apply :)

mpc_headers  = libmpdclient.h 
mpc_headers += list.h
mpc_headers += password.h
mpc_headers += charConv.h
mpc_headers += status.h
mpc_headers += util.h
mpc_headers += command.h
mpc_headers += mpc.h
mpc_headers += options.h

mpc_SOURCES  = libmpdclient.c 
mpc_SOURCES += main.c
mpc_SOURCES += list.c 
mpc_SOURCES += password.c 
mpc_SOURCES += charConv.c
mpc_SOURCES += status.c
mpc_SOURCES += util.c
mpc_SOURCES += command.c
mpc_SOURCES += options.c
mpc_SOURCES += $(mpc_headers)
